<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.eclipse.om2m</groupId>
    <artifactId>org.eclipse.om2m.sui</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <packaging>bundle</packaging>
    <name>Sui Access Control Plugin for OM2M</name>

    <properties>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <om2m.version>1.1.0</om2m.version>
    </properties>

    <dependencies>
        <!-- OM2M core (provided by the runtime — same scope used in Hammad's plugin) -->
        <dependency>
            <groupId>org.eclipse.om2m</groupId>
            <artifactId>org.eclipse.om2m.commons</artifactId>
            <version>${om2m.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.eclipse.om2m</groupId>
            <artifactId>org.eclipse.om2m.core</artifactId>
            <version>${om2m.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.eclipse.om2m</groupId>
            <artifactId>org.eclipse.om2m.core.service</artifactId>
            <version>${om2m.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.eclipse.om2m</groupId>
            <artifactId>org.eclipse.om2m.interworking.service</artifactId>
            <version>${om2m.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>commons-logging</groupId>
            <artifactId>commons-logging</artifactId>
            <version>1.1.1</version>
            <scope>provided</scope>
        </dependency>

        <!-- OSGi declarative services -->
        <dependency>
            <groupId>org.osgi</groupId>
            <artifactId>org.osgi.core</artifactId>
            <version>6.0.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.osgi</groupId>
            <artifactId>org.osgi.service.component</artifactId>
            <version>1.4.0</version>
            <scope>provided</scope>
        </dependency>

        <!-- MQTT for failover heartbeats -->
        <dependency>
            <groupId>org.eclipse.paho</groupId>
            <artifactId>org.eclipse.paho.client.mqttv3</artifactId>
            <version>1.2.5</version>
        </dependency>

        <!-- JSON parsing for Sui CLI output -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.16.1</version>
        </dependency>

        <!-- Logging (OM2M ships SLF4J) -->

        <!-- BouncyCastle for Ed25519 signing -->
        <dependency>
            <groupId>org.bouncycastle</groupId>
            <artifactId>bcprov-jdk15on</artifactId>
            <version>1.70</version>
        </dependency>

        <!-- Tests -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.felix</groupId>
                <artifactId>maven-bundle-plugin</artifactId>
                <version>5.1.9</version>
                <extensions>true</extensions>
                <configuration>
                    <instructions>
                        <Bundle-SymbolicName>org.eclipse.om2m.sui</Bundle-SymbolicName>
                        <Bundle-Activator>org.eclipse.om2m.sui.SuiPluginActivator</Bundle-Activator>
                        <Export-Package>org.eclipse.om2m.sui</Export-Package>
                        <Import-Package>
                            !java.*,
                            !org.eclipse.paho.*,
                            !com.fasterxml.jackson.*,
                            !org.bouncycastle.*,
                            org.eclipse.om2m.commons.*,
                            org.eclipse.om2m.core.service,
                            org.eclipse.om2m.interworking.service,
                            org.osgi.framework,
                            org.apache.commons.logging,
                            *
                        </Import-Package>
                        <Embed-Dependency>
                            jackson-databind,jackson-core,jackson-annotations,
                            org.eclipse.paho.client.mqttv3,
                            bcprov-jdk15on
                        </Embed-Dependency>
                        <Embed-Transitive>true</Embed-Transitive>
                    </instructions>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
